--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       args:
-        user: sammy
+        user: waqf
         uid: 1000
       context: ./
       dockerfile: Dockerfile
