--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ before_script:
 deploy:
   <<: *deploy_templ
   tags:
-    - shell-runner
+    - shell-dev
   only:
     - develop
     - devops/cicd
