--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "${IP:-127.0.0.1}:9000:9000"
     volumes:
-      - ./:/var/www
+      - $PDW:/var/www
 
   db:
     image: mysql:5.7
@@ -40,8 +40,8 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./:/var/www
-      - ./docker-compose/nginx:/etc/nginx/conf.d/
+      - $PWD:/var/www
+      - $PWD/docker-compose/nginx:/etc/nginx/conf.d
 
 volumes:
   - mysql: {}
