--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -14,7 +14,12 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
         gzip_static on;
     }
 }
