--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -27,7 +27,7 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_USER: ${DB_USERNAME}
     volumes:
-       - $PWD/mysql:/var/lib/mysql
+       - /opt/mysql:/var/lib/mysql
 
   nginx:
     image: nginx:alpine
