--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
   script:
     - export IP=$(hostname -I | cut -f1 -d' ')
     - echo $IP
-    - sed -i "s~http://localhost:8080;~http://$IP:8080;~" ./nginx/conf.d/app.conf
+    - sed -i "s~http://localhost:8080;~http://$IP:8080;~" ./docker-compose/nginx/app.conf
     - sudo mkdir -p /opt/waqf
     - sudo cp -rf . /opt/waqf
     - cd /opt/waqf
