--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name "waqf-admin.softlex.pro";
     index index.php index.html;
     root /var/www/public;
     client_max_body_size 32M;
@@ -7,7 +8,6 @@ server {
     location / {
         try_files $uri /index.php?$args;
     }
-
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass app:9000;
@@ -16,4 +16,24 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+}
+
+server {
+    listen 80;
+    server_name "waqf.softlex.pro";
+    index index.php index.html;
+    root /var/www/public;
+    client_max_body_size 32M;
+    location / {
+        location / {
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        gzip_static on;
+    }
+    }
+
 }
