--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -1,5 +1,4 @@
 server {
-    listen 80;
     server_name "waqf-admin.softlex.pro";
     index index.php index.html;
     root /var/www/public;
@@ -16,17 +15,23 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /ssl/waqf-admin.softlex.pro/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /ssl/waqf-admin.softlex.pro/privkey.pem; # managed by Certbot
+    include /ssl/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /ssl/ssl-dhparams.pem; # managed by Certbot
+
 }
 
 server {
-    listen 80;
     server_name "waqf.softlex.pro";
     index index.php index.html;
     root /var/www/public;
     client_max_body_size 32M;
     location / {
         location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://10.130.0.3:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection keep-alive;
@@ -35,5 +40,37 @@ server {
         gzip_static on;
     }
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /ssl/waqf.softlex.pro/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /ssl/waqf.softlex.pro/privkey.pem; # managed by Certbot
+    include /ssl/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /ssl/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = waqf-admin.softlex.pro) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name "waqf-admin.softlex.pro";
+    return 404; # managed by Certbot
+
+
+}
+
+server {
+    if ($host = waqf.softlex.pro) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name "waqf.softlex.pro";
+    return 404; # managed by Certbot
+
 
 }
