--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - $PWD:/var/www
+      - /opt/waqf:/var/www
 
   db:
     image: mysql:5.7
@@ -37,6 +37,6 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - $PWD:/var/www
-      - $PWD/docker-compose/nginx:/etc/nginx/conf.d
-      - $PWD/ssl:/ssl
+      - /opt/waqf:/var/www
+      - /opt/waqf/docker-compose/nginx:/etc/nginx/conf.d
+      - /opt/waqf/ssl:/ssl
