--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -5,7 +5,7 @@ services:
       args:
         user: waqf
         uid: 1000
-      context: $PWD
+      context: /opt/waqf
       dockerfile: Dockerfile
     image: waqfapp
     container_name: app
