--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_USER: ${DB_USERNAME}
     volumes:
-       - ./database/migrations/
+       - mysql:/var/lib/mysql
     networks:
       - travellist
 
@@ -41,10 +41,13 @@ services:
       - 8000:80
     volumes:
       - ./:/var/www
-      - ./docker-compose/nginx:/etc/nginx/conf.d/
+      - ./docker-compose/nginx/app_conf.local:/etc/nginx/conf.d/default.conf
     networks:
       - travellist
 
 networks:
   travellist:
     driver: bridge
+
+volumes:
+  mysql:
