add delete untags image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ before_script:
     - sudo chown -R 1000.1000 /opt/waqf
     - docker-compose -f docker-compose-server.yml down
     - sudo docker-compose -f docker-compose-server.yml up -d --build
+    - sudo docker rmi $(docker images --filter "dangling=true" -q --no-trunc)
     - echo 'Successfully deploy'
 
 deploy:
