--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/nova": "*",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
