--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -16,6 +16,16 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
+    location /adminer/ {
+        proxy_pass http://adminer:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        gzip_static on;
+    }
+
     listen 443 ssl; # managed by Certbot
     ssl_certificate /ssl/waqf-admin.softlex.pro/fullchain.pem; # managed by Certbot
     ssl_certificate_key /ssl/waqf-admin.softlex.pro/privkey.pem; # managed by Certbot
