--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ybmcR7szUdY8SqVMbJK33abGQ/Z4NaphEFpS4qSQ7Qk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=127.0.0.1
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=user
-DB_PASSWORD=
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=FDgm34as1sadlmk21
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mail.ru
+MAIL_PORT=465
+MAIL_USERNAME=waqf.test@bk.ru
+MAIL_PASSWORD=2uJe5kXSbGAQLr7
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=waqf.test@bk.ru
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
