--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -10,7 +10,7 @@ services:
       dockerfile: Dockerfile
     image: waqfapp
     container_name: app
-    working_dir: /var/www/
+    working_dir: /var/www
     volumes:
       - /opt/waqf:/var/www
 
