--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ before_script:
   stage: deploy
   script:
     - sudo rm -rf /opt/waqf
+    - sudo rm -rf .git
     - sudo mkdir -p /opt/waqf
     - sudo cp -rf . /opt/waqf
     - ls -la
@@ -13,7 +14,6 @@ before_script:
     - export PWD=$(pwd)
     - echo $PWD
     - sudo chown -R 1000:1001 /opt/waqf
-    - rm -rf .git
     - docker-compose -f docker-compose-server.yml up -d --build --force-recreate
     - echo 'Successfully deploy'
 
