--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -24,7 +24,7 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_USER: ${DB_USERNAME}
     volumes:
-       - /opt/mysql:/var/lib/mysql
+       - /opt/waqf/mysql:/var/lib/mysql
 
   nginx:
     image: nginx:alpine
