--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ybmcR7szUdY8SqVMbJK33abGQ/Z4NaphEFpS4qSQ7Qk=
 APP_DEBUG=true
 APP_URL=127.0.0.1
 
@@ -11,7 +11,7 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=FDgm34as1sadlmk21
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mail.ru
 MAIL_PORT=465
-MAIL_USERNAME=email@example.com
-MAIL_PASSWORD=pass
+MAIL_USERNAME=waqf.test@bk.ru
+MAIL_PASSWORD=2uJe5kXSbGAQLr7
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=email@example.com
+MAIL_FROM_ADDRESS=waqf.test@bk.ru
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
