--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ybmcR7szUdY8SqVMbJK33abGQ/Z4NaphEFpS4qSQ7Qk=
 APP_DEBUG=true
-APP_URL=127.0.0.1
+APP_URL=https://waqf-admin.softlex.pro/
 
 LOG_CHANNEL=stack
 
