PWW-157 create news_hashtag_for_news and seed

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=WAQF Backoffice
 APP_ENV=local
 APP_KEY=base64:ybmcR7szUdY8SqVMbJK33abGQ/Z4NaphEFpS4qSQ7Qk=
 APP_DEBUG=true
