PWW-164 add Link field to news

--- a/.env.dev
+++ b/.env.dev
@@ -44,3 +44,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=451379605898388
+FACEBOOK_CLIENT_SECRET=90b4cb446b95ed91007a7114b4ea1460
+FACEBOOK_CALLBACK_URL=https://waqf.softlex.pro/
+
+GOOGLE_CLIENT_ID=255175475481-ic77ip77d1r8nk5p3ctpqp9d0qurvbta.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=Kbm6TPpyPVcBN4O2_HO0VSV1
+GOOGLE_REDIRECT=https://waqf.softlex.pro/
+
+FRONTEND_URL_GET_NEWS=https://waqf.softlex.pro/
