--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
+        "khalin/nova-link-field": "^1.2",
         "laravel/framework": "^8.12",
         "laravel/nova": "*",
         "laravel/socialite": "^5.1",
