PWW-162 add hashtags to news

--- a/.env.dev
+++ b/.env.dev
@@ -53,4 +53,4 @@ GOOGLE_CLIENT_ID=255175475481-ic77ip77d1r8nk5p3ctpqp9d0qurvbta.apps.googleuserco
 GOOGLE_CLIENT_SECRET=Kbm6TPpyPVcBN4O2_HO0VSV1
 GOOGLE_REDIRECT=https://waqf.softlex.pro/
 
-FRONTEND_URL_GET_NEWS=https://waqf.softlex.pro/getNews/
+FRONTEND_URL_GET_NEWS=https://waqf.softlex.pro/news/
