--- a/.env.dev
+++ b/.env.dev
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mail.ru
+MAIL_HOST=smtp.beget.com
 MAIL_PORT=465
-MAIL_USERNAME=waqf.test@bk.ru
-MAIL_PASSWORD=2uJe5kXSbGAQLr7
+MAIL_USERNAME=no-reply@climateguard.info
+MAIL_PASSWORD=Ecnbyjdbx1
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=waqf.test@bk.ru
+MAIL_FROM_ADDRESS=no-reply@climateguard.info
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
