--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
       ],
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.11",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "gobrightspot/nova-detached-actions": "^1.1",
