--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -11,6 +11,8 @@ services:
     image: waqfapp
     container_name: app
     working_dir: /var/www
+    ports:
+      - "10.130.0.3:6001:6001"
     volumes:
       - /opt/waqf:/var/www
 
