--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     working_dir: /var/www/
     volumes:
       - ./:/var/www
+    ports:
+      - "6001:6001"
     networks:
       - travellist
 
@@ -44,6 +46,11 @@ services:
       - ./docker-compose/nginx/app_conf.local:/etc/nginx/conf.d/default.conf
     networks:
       - travellist
+
+
+  adminer:
+    image: adminer
+    restart: always
 
 networks:
   travellist:
