--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,24 @@ services:
     working_dir: /var/www/
     volumes:
       - ./:/var/www
+    networks:
+      - travellist
+
+  websocket:
+    build:
+      args:
+        user: waqf
+        uid: 1000
+      context: ./
+      dockerfile: Dockerfile
+    image: waqfapp-websocket
+    entrypoint: /entrypoint-websocket
+    command: php artisan websockets:serve
+    container_name: websocket
+    restart: unless-stopped
+    working_dir: /var/www/
+    volumes:
+      - ./:/var/www
     ports:
       - "6001:6001"
     networks:
